crates/djls-project/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__bookmarks.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::bookmark_search":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "bookmarks.templatetags.bookmarks::tag::bookmark_search":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: search
            requirement: required
            kind: Variable
          - name: mode
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
