crates/djls-project/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__pagination.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "bookmarks.templatetags.pagination::tag::pagination":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: page
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs: {}
