crates/djls-project/tests/snapshots/corpus__repos__linkding__bookmarks__templatetags__shared.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "bookmarks.templatetags.shared::tag::formfield":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: field
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "bookmarks.templatetags.shared::tag::formhelp":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: field_var
          requirement: required
          kind: Variable
    as_var: keep
  "bookmarks.templatetags.shared::tag::formlabel":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: field
            requirement: required
            kind: Variable
          - name: label_text
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "bookmarks.templatetags.shared::tag::markdown":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: markdown_text
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "bookmarks.templatetags.shared::tag::replace_query_param":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "bookmarks.templatetags.shared::tag::update_query_string":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities:
  "bookmarks.templatetags.shared::filter::first_char": no_argument
  "bookmarks.templatetags.shared::filter::humanize_absolute_date": no_argument
  "bookmarks.templatetags.shared::filter::humanize_relative_date": no_argument
  "bookmarks.templatetags.shared::filter::model_to_dict": no_argument
  "bookmarks.templatetags.shared::filter::remaining_chars": required_argument
block_specs:
  "bookmarks.templatetags.shared::tag::formhelp":
    body_analysis_evidence: not_detected
    end_tag: endformhelp
    intermediates: []
  "bookmarks.templatetags.shared::tag::htmlmin":
    body_analysis_evidence: not_detected
    end_tag: endhtmlmin
    intermediates: []
